# fmp-mcp-research

./: .env.example  .gitignore  Dockerfile  README.md  apply_openai_safety_fix.py  cloudrun-env.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHANGELOG_v0.3.md  OPENAI_APPS_SDK_READINESS.md
fmp-mcp-research-main/docs/: CHANGELOG_v0.3.md
fmp-mcp-research-main/scripts/: package.sh
fmp-mcp-research-main/src/fmp_mcp_research/: __init__.py  report_contract.py  server.py
scripts/: package.sh
src/fmp_mcp_research/: __init__.py  earnings_release.py  evidence.py  fmp_client.py  report_contract.py  sec_client.py  server.py
src/fmp_mcp_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_contract.py  test_evidence.py  test_sec_client.py  test_server_tool_contract.py
