[project]
name = "fmp-mcp-research"
version = "0.3.0"
description = "Remote MCP server for FMP-backed buy-side earnings-call research evidence packs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.18.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "tenacity>=8.2.3",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]

[project.scripts]
fmp-mcp-research = "fmp_mcp_research.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
